--- a/apps/hana_shirabe_web/assets/css/app.css
+++ b/apps/hana_shirabe_web/assets/css/app.css
@@ -87,24 +87,24 @@
   default: false;
   prefersdark: false;
   color-scheme: "light";
-  --color-base-100: oklch(98% 0.026 102.212);
-  --color-base-200: oklch(97% 0.071 103.193);
-  --color-base-300: oklch(94% 0.129 101.54);
+  --color-base-100: oklch(98.0% 0.024 102.2);
+  --color-base-200: oklch(94.5% 0.093 103.2);
+  --color-base-300: oklch(92.5% 0.160 101.5);
   --color-base-content: oklch(42% 0.095 57.708);
   --color-primary: oklch(0.4348 0.0997 118.56);
   --color-primary-content: oklch(0.8312 0.0589 130.21);
   --color-secondary: oklch(0.9659 0.1068 112.54);
   --color-secondary-content: oklch(52.3% 0.095 131.4);
-  --color-accent: oklch(0.7422 0.1464 77.65);
-  --color-accent-content: oklch(47.9% 0.065 81.8);
-  --color-neutral: oklch(0.8833 0.1439 84);
+  --color-accent: oklch(92.5% 0.156 77.7);
+  --color-accent-content: oklch(47.3% 0.072 81.8);
+  --color-neutral: oklch(95.4% 0.065 84.0);
   --color-neutral-content: oklch(0.4244 0.1143 56.47);
-  --color-info: oklch(71% 0.203 305.504);
-  --color-info-content: oklch(40.1% 0.088 301.3);
+  --color-info: oklch(89.8% 0.100 305.5);
+  --color-info-content: oklch(45.6% 0.100 301.3);
   --color-success: oklch(78.4% 0.076 124.3);
   --color-success-content: oklch(37% 0.077 168.94);
   --color-warning: oklch(78.6% 0.255 91.9);
-  --color-warning-content: oklch(41% 0.112 45.904);
+  --color-warning-content: oklch(41.0% 0.112 45.904);
   --color-error: oklch(86.1% 0.21 23.1);
   --color-error-content: oklch(38.6% 0.213 15);
   --radius-selector: 0.5rem;
