--- a/apps/hana_shirabe_web/lib/hana_shirabe_web/controllers/page_html/show.html.heex
+++ b/apps/hana_shirabe_web/lib/hana_shirabe_web/controllers/page_html/show.html.heex
@@ -16,6 +16,7 @@
           </div>
       <div class="card">
         <div class="card-body">
+          <h3 class="text-xl"><code>&lt;Timeline&gt;</code></h3>
           <p class="text-center">TBD</p>
         </div>
       </div>
