chore: add comments

--- a/apps/hana_shirabe_web/assets/css/font.css
+++ b/apps/hana_shirabe_web/assets/css/font.css
@@ -1,5 +1,13 @@
 /**
  * 字体配置。
+
+  要专门搞这套字体设定的由来是 LessWrong 等一系列博客。
+  其字体为 Merriweather, Palatino, Garamond, Baskerville, Libre Baskerville, Georgia, serif
+  （根据 Grok ，2020~2023年左右也是 Alegreya ）。
+
+  这种人文主义字体的衬线体，免费开源的：
+
+  无脑思源黑体。
 ***/
 
 /**
