--- a/apps/hana_shirabe_web/assets/css/app.css
+++ b/apps/hana_shirabe_web/assets/css/app.css
@@ -10,8 +10,6 @@
 @source "../js";
 @source "../../lib/hana_shirabe_web";
 
-@import "../css/font.css";
-
 /* 用于启用 "hero-#{ICON}" 类的一个 Tailwind 插件。
    heroicons 的安装本身由你的 mix.exs 管理。 */
 @plugin "../vendor/heroicons";
@@ -119,60 +117,7 @@
   --noise: 1;
 }
 
-/**
- * 将字体与 Tailwind 建立联系。
-*
-@theme {
-  --font-site-content-sans: "ChillDIN", sans-serif;
-  --font-user-content-serif: "Alegreya", "KingHwa Old Song", serif;
-} */
-
-/* Phoenix 使用的是 TailwindCSS-Standalone，
-  那几十兆（现在是一百多兆了）中就正好包括了一些常见的插件，引入即可。
- */
-@plugin "@tailwindcss/typography";
-
-/* 
- * 针对 @tailwindcss/typography 的配置：
- * 参见
-  https://github.com/tailwindlabs/tailwindcss-typography/issues/372#issuecomment-2616848354
-*/
-@utility prose {
-  --tw-prose-body: var(--color-primary);
-  --tw-prose-headings: var(--color-primary);
-  --tw-prose-bold: var(--color-primary);
-  --tw-prose-quote-borders: var(--color-slate-300);
-  --tw-prose-quotes: var(--color-muted-foreground);
-
-  code {
-    &::before,
-    &::after {
-      display: none;
-    }
-    text-wrap: nowrap;
-  }
-
-  blockquote {
-    font-weight: 400;
-  }
-
-  p {
-    @apply my-2; /* my-3 约等于 0.75rem，比默认值小得多 */
-  }
-
-  /* 标题的间距也需要调整，使其更紧凑 */
-  h2 {
-    @apply mt-8 mb-2;
-  }
-  h3 {
-    @apply mt-6 mb-1;
-  }
-
-  /* 列表项之间也不需要那么大的空隙 */
-  li {
-    @apply my-1;
-  }
-}
+@import "../css/prose.css";
 
 /* 根据 LiveView 类添加变体 */
 @custom-variant phx-click-loading (.phx-click-loading&, .phx-click-loading &);
@@ -180,7 +125,7 @@
 @custom-variant phx-change-loading (.phx-change-loading&, .phx-change-loading &);
 
 /* 使用数据属性实现 dark mode  */
-@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
+@custom-variant dark (&:where([data-theme=noctilucent], [data-theme=noctilucent] *));
 
 /* 使 LiveView 包装器 div 在布局中透明 */
 [data-phx-session],
