--- a/apps/hana_shirabe_web/lib/hana_shirabe_web/controllers/page_html/page.html.heex
+++ b/apps/hana_shirabe_web/lib/hana_shirabe_web/controllers/page_html/page.html.heex
@@ -27,6 +27,26 @@
           </div>
         </div>
       <% end %>
+      <%= if @chosen_locale do # TODO: Add declaration. %>
+        <div class="alert alert-info my-8 alert-outline">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            class="stroke-current shrink-0 w-6 h-6"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+            >
+            </path>
+          </svg>
+          <div>
+          </div>
+        </div>
+      <% end %>
       <article class="prose sm:prose-xl">
         {@markdown |> raw()}
       </article>
