--- a/apps/hana_shirabe_web/lib/hana_shirabe_web/controllers/page_html/show.html.heex
+++ b/apps/hana_shirabe_web/lib/hana_shirabe_web/controllers/page_html/show.html.heex
@@ -6,9 +6,11 @@
           <div class="divider">
             <p class="text-lg card-title"><code>&lt;prose&gt;</code> with Markdown Demostration</p>
           </div>
+          <div data-theme="archaiologia">
           <article class="prose sm:prose-xl">
             <%= @content %>
           </article>
+          </div>
         </div>
       </div>
       <div class="divider">
